datepicker fix. Overflow må være på document

--- a/web/src/main/java/no/nav/sbl/dialogarena/modiabrukerdialog/web/pages/personpage/personpage.less
+++ b/web/src/main/java/no/nav/sbl/dialogarena/modiabrukerdialog/web/pages/personpage/personpage.less
@@ -9,7 +9,6 @@
 
 body {
   position: relative;
-  overflow-y: scroll;
   .clearfix;
 }
 
